# Wise-Router

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  eval_report.json  pyproject.toml  requirements.txt  run.sh
.streamlit/: config.toml
app/: api_server.py  config.py  main.py  router.py
app/classifier/: task_classifier.py
app/deterministic/: code_tools.py  factual.py  logic_solver.py  math_solver.py  ner.py  sentiment.py  summarizer.py
app/llm/: batcher.py  fireworks_client.py  model_selector.py
backend/: main.py
data/: task_classifier.pkl  training_data.json
scripts/: eval_local.py  generate_training_data.py
streamlit_app/: Home.py  requirements-fe.txt  run.py
streamlit_app/pages/: 1_Evaluate.py  2_Live_Demo.py  3_Cost_Compare.py
streamlit_app/utils/: api_client.py  charts.py  engine.py
tests/: conftest.py  test_code_tools.py  test_fireworks_client.py  test_logic_solver.py  test_main.py  test_math_solver.py  test_model_selector.py  test_ner.py  test_router.py  test_sentiment.py  test_summarizer.py  test_task_classifier.py
tests/fixtures/: tasks_track1_sample.json
